@@ -50,11 +50,9 @@ This Work includes contributions authored by David E. Jones, not as a
                 <field name="exampleId"><default-field><hidden/></default-field></field>
                 <field name="exampleItemSeqId"><default-field><ignored/><!-- this will be auto-sequenced --></default-field></field>
                 <field name="amountUomId">
-                    <default-field title="UOM">
-                        <drop-down allow-empty="true">
-                            <list-options list="allUomAndTypeList" key="${uomId}" text="${typeDescription}: ${description} (${abbreviation})"/>
-                        </drop-down>
-                    </default-field>
+                    <default-field title="UOM"><drop-down allow-empty="true">
+                        <list-options list="allUomAndTypeList" key="${uomId}" text="${typeDescription}: ${description} (${abbreviation})"/>
+                    </drop-down></default-field>
                 </field>
                 <field name="submitButton"><default-field title="Add"><submit confirmation="Really Add?"/></default-field></field>
             </form-single>
@@ -67,11 +65,11 @@ This Work includes contributions authored by David E. Jones, not as a
             </field>
             <field name="exampleItemSeqId"><default-field title="Item"><display/></default-field></field>
             <field name="description">
-                <header-field show-order-by="true"><text-find hide-options="true"/></header-field>
+                <header-field show-order-by="true"><text-find hide-options="true" size="15"/></header-field>
                 <default-field><text-line size="15"/></default-field>
             </field>
             <field name="amount">
-                <header-field show-order-by="true"><range-find size="5"/></header-field>
+                <header-field show-order-by="true"/>
                 <default-field><text-line size="5"/></default-field>
             </field>
             <field name="amountUomId">
@@ -88,6 +86,7 @@ This Work includes contributions authored by David E. Jones, not as a
             </field>
             <field name="submitButton"><default-field title="Update"><submit/></default-field></field>
             <field name="deleteLink">
+                <header-field title="Find"><submit/></header-field>
                 <default-field title="">
                     <!-- the parameters for this will be auto-mapped: exampleId, exampleItemSeqId -->
                     <link url="deleteExampleItem" text="Delete" confirmation="Really Delete?"/>
